# IS3600

./: CodeDeployDemo-EC2-Trust.json  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: actions.yml  ci.yml  codedeploy.yml  pyproject.toml  requirements.txt
tests/: test_main.py
