[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file_encoder"
version = "0.1.0"
description = "A minimal example package for CI/CD"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff"
]
